algumas alteraçãoes no layout

--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,11 @@
 			h1{font-size: 25pt}
 			a{font-size: 25pt; margin-left: -25px; padding: 10px}
 			img{width: 110%;}
+
 			.figuras{opacity: 1;}			
-			
+			/*TEXTOS*/
+			.fixa{float: none;width: 91%;margin-left: 0%}
+			.textos{margin-right:0%;margin-left: 0%}
 
 			#menu{margin-left: 5px;}
 			#menu ul {width: 100%; margin-left: -3%; margin-top: 20%;}
