--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 		*{ margin: 0; padding: 0; font-size: 100% border: none; outline: none;box-sizing: border-box;}
 		p{text-align: justify;text-indent: 50px; color: black; font-size: 20pt}
 
-		.p_textos{text-align: justify;text-indent: 50px; color: black; font-size: 150%; font-weight: bold; margin-left: 15px;
+		.p_textos{text-align: justify;text-indent: 50px; color: black; font-size: 20pt; font-weight: bold; margin-left: 15px;
 		margin-right: 15px}
 
 		
@@ -85,6 +85,7 @@
 			/*TEXTOS*/
 			.fixa{float: none;width: 91%;margin-left: 0%}
 			.textos{margin-right:0%;margin-left: 0%}
+			.p_textos{font-size: 15pt; margin-left: 10px;text-indent: 30px}
 
 			#menu{margin-left: 5px;}
 			#menu ul {width: 100%; margin-left: -3%; margin-top: 20%;}
