largura horario para tablet

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@
 			#post-4{top:-400px;left: 330px;}
 			.post-it{width: 20%; height: 30%; font-size: 15pt;}
 
-
+			#horarios{width: 90%;}
 
 
 
