--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 		*{ margin: 0; padding: 0; font-size: 100% border: none; outline: none;box-sizing: border-box;}
 		p{text-align: justify;text-indent: 50px; color: black; font-size: 20pt}
 
-		.p_textos{text-align: justify;text-indent: 50px; color: black; font-size: 20pt; font-weight: bold; margin-left: 15px;
+		.p_textos{text-align: justify;text-indent: 50px; color: black; font-size: 20pt; font-weight:300; margin-left: 15px;
 		margin-right: 15px}
 
 		
