--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@
 			#contatos iframe{width:100%;}
 			#contatos div{margin-left: 20px;padding: 5px}
 			#contatos div p{font-size: 12pt;text-indent: 10px}
+			#endereco{display: none;}
 
 		}
 		/**************laptop**********************/		
