padding no endereço

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
 			/*CONTATOS*/
 			#contatos iframe{width:100%;}
 			#contatos div{padding: 5px;margin-left: 0px}
-			#contatos div p{font-size: 12pt;text-indent: 10px;margin-left: 0px}
+			#contatos div p{font-size: 12pt;text-indent: 10px;padding-left: 20px}
 			
 		
 
