--- a/css/style.css
+++ b/css/style.css
@@ -63,14 +63,23 @@
 		/*PAGINA_CONTATOS*/
 		#contatos div{margin-left: 0px;margin-bottom: 20px;}
 		#contatos div p{color: white; margin-left: -30px}
+
+
 		 /*PAGINA_HORARIOS*/
-		
 		#horarios{flex: 1;padding: 5px 5px 5px 5px;align-self: center; background-color: rgba(128,128,128,0.7);
 		box-shadow: 10px 10px 100px 10px rgb(15,177,255); width: 60%; border: solid 1px rgb(15,177,255)}
 		
 		#horarios p{line-height: normal;text-align: justify;text-indent: 10px; color: white; font-size: 15pt;  margin-left: 15px;}
 		#horarios h2{font-size: 25pt; font-weight: bold;text-align: center;color: white}
 		#horarios h3{font-size: 15pt; font-weight: bold;color: white}
+
+		/*PAGINA_FOTOS*/
+		#fotos{flex: 1;padding: 5px 5px 5px 5px;align-self: center; background-color: rgba(12,12,12,0.7);
+		box-shadow: 10px 10px 100px 10px rgb(15,177,255); width: 60%; border: solid 1px rgb(15,177,255)}
+		
+		#fotos p{line-height: normal;text-align: justify;text-indent: 10px; color: white; font-size: 15pt;  margin-left: 15px;}
+		
+
 
 
 		 /********************CELULAR********************/
