configurando as fotos

--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,11 @@
 
 		/*PAGINA_FOTOS*/
 		#fotos{flex: 1;padding: 5px 5px 5px 5px;align-self: center; background-color: rgba(12,12,12,0.7);
-		box-shadow: 10px 10px 100px 10px rgb(15,177,255); width: 60%; border: solid 1px rgb(15,177,255)}
+		box-shadow: 10px 10px 100px 10px rgb(15,177,255); width: 90vw;min-height: 80vh; border: solid 1px rgb(15,177,255)}
 		
 		#fotos p{line-height: normal;text-align: justify;text-indent: 10px; color: white; font-size: 15pt;  margin-left: 15px;}
-		
+		#fotos img{width: 5vw; height: 12vh;margin:5px ;cursor: pointer; }
+		#fotos img:hover{position:absolute; width: 40%;height: auto ;transition: 0s;left: 30%; top:40%; }
 
 
 
@@ -118,6 +119,12 @@
 			#post-3{top:30px;left: 60px;}		
 			#post-4{top:-400px;left: 130px;}
 			.post-it{width: 50%; height: 30%; font-size: 15pt;}
+
+
+			#fotos img{width: 12vw; height: 8vh;margin:5px ;cursor: pointer; }
+			#fotos img:hover{position:absolute; width: 80%;height: auto ;transition: 0s;left: 10%; top:70%; }
+
+
 		}
 
 
@@ -139,6 +146,10 @@
 			#contatos iframe{width:100%;}
 			#contatos div{margin-left: 20px;padding: 5px}
 			#contatos div p{font-size: 12pt;text-indent: 10px}
+
+			#fotos img{width: 7vw; height: 9vh;margin:5px ;cursor: pointer; }
+			#fotos img:hover{position:absolute; width: 50%;height: auto ;transition: 0s;left: 25%; top:53%; }
+
 			
 
 		}
