--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
 		
 		#fotos p{line-height: normal;text-align: justify;text-indent: 10px; color: white; font-size: 15pt;  margin-left: 15px;}
 		#fotos img{width: 5vw; height: 12vh;margin:5px ;cursor: pointer; }
-		/*#fotos img:hover{position:absolute; width: 40%;height: auto ;transition: 0s;left: 30%; top:40%; }*/
+		
 		#fotopadrao{position:absolute; width: 40%;height: auto ;transition: 0s;left: 30%; top:45%; border: 10px;
 		border:0.6vw solid white;border-bottom: 8vh solid white;}
 	
@@ -124,17 +124,23 @@
 
 
 			#fotos img{width: 12vw; height: 8vh;margin:8px ;cursor: pointer; }
-			/*#fotos img:hover{position:absolute; width: 80%;height: auto ;transition: 0s;left: 10%; top:70%; }*/
+			
 			#fotopadrao{position:absolute; width: 80%;height: auto ;transition: 0s;left: 13%; top:65%;border: 10px;
 			border:0.6vw solid white;border-bottom: 8vh solid white; }
 
 		}
 
+			@media screen and (min-width: 425px) and (max-width: 650px){
+			#fotos img{width: 12vw; height: 8vh;margin:8px ;cursor: pointer; }
+			
+			#fotopadrao{position:absolute; width: 40%;height: auto ;transition: 0s;left: 30%; top:95%;border: 10px;
+			border:0.6vw solid white;border-bottom: 8vh solid white; }	
+			}
 		
 		
 
 		/**************TABLET**********************/
-		@media screen and (min-width: 426px) and (max-width: 800px) {
+		@media screen and (min-width: 651px) and (max-width: 800px) {
 			#horarios{width: 80%;}
 			body{background-color: rgba(128,128,128,0.7);}
 			#figuras_saopedro{display: flex;justify-content:space-around; flex-wrap: wrap; padding: 15px; margin-top: 230px}
@@ -152,7 +158,7 @@
 
 
 			#fotos img{width: 8vw; height: 10vh;margin:8px ;cursor: pointer; }
-			/*#fotos img:hover{position:absolute; width: 50%;height: auto ;transition:0s; left: 25%; top:75%; }*/
+			
 			#fotopadrao{position:absolute; width: 50%;height: auto ;transition:0s; left: 25%; top:52%;border: 10px;
 			border:0.6vw solid white;border-bottom: 8vh solid white; }
 			
